--- a/css/primary.css
+++ b/css/primary.css
@@ -11,3 +11,10 @@ body {
 #wrapper {
 	height: 1000px;
 }
+
+.card {
+    margin: 0 auto; /* Added */
+    float: none; /* Added */
+    margin-bottom: 10px; /* Added */
+    margin-top: 100px;
+}
